--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,4 @@
 <nav>
-  <a href="pjlabuda/">Home</a>
-  <a href="pjlabuda/about.html">About</a>
+  <a href="/pjlabuda/">Home</a>
+  <a href="/pjlabuda/about.html">About</a>
 </nav>
