Test url of page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,5 +6,6 @@
 </head>
 <body style="background-color: aquamarine;">
     {{ content }}
+    {{ page.url }}
     {% include navigation.html %}
 </body></html>
