--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,4 @@
 <nav>
-  <a href="/pjlabuda/" {% if page.url == "/pjlabuda/"  %}style="color:red;" {% endif %}>Home</a>
-  <a href="/pjlabuda/about.html" {% if page.url == "/pjlabuda/about.html"  %}style="color: red;"{% endif %}>About</a>
+  <a href="/" {% if page.url == "/pjlabuda/"  %}style="color:red;" {% endif %}>Home</a>
+  <a href="/about.html" {% if page.url == "/pjlabuda/about.html"  %}style="color: red;"{% endif %}>About</a>
 </nav>
