--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,7 @@
         <ul>
             {% for project in site.projects %}
               <li><h2><a href="{{ project.url }}">{{ project.name }}</a></h2>
+                <p>This should be a link</p>
               </li>
             {% endfor %}
           </ul>
