Fix bug in layout?

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
         {{ content }}
         <ul>
             {% for project in site.projects %}
-              <li><h2><a href="{{ project.url }}">{{ project.name }}</a></h2>
+              <li><h2><a href="{{ project.url }}">{{ project.url }}</a></h2>
                 <p>This should be a link</p>
               </li>
             {% endfor %}
