--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
-<ul>
-  {% assign mypages = site.pages | sort: "order" %}
-    {% for page in mypages %}
-    <li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
-    {% endfor %}
-</ul>
+<nav>
+  {% assign mypages = site.html_pages | sort: "order" %}
+  {% for page in mypages %}
+  <a href="{{ page.url | absolute_url }}">_{{ page.title }}_</a>
+  {% endfor %}
+</nav>
