--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -4,7 +4,6 @@ number: 01
 project_title: Project Title
 ---
 
-<p><span style="font-size: larger;">{{ layout.number }}</span>
-<h1>{{ layout.project_title }}</h1>
-</p>
-{{ content }}
+<p><span style="font-size: larger;">01</span>
+<h1>TEST TITLE</h1>
+{{ content }}</p>
