--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -4,6 +4,8 @@ number: 01
 project_title: Project Title
 ---
 
-<p><span style="font-size: larger;">01</span>
-<h1>TEST TITLE</h1>
-{{ content }}</p>
+<p><span style="font-size: larger;">{{ page.number }}</span> <span>
+        <h1>{{ page.title }}</h1>
+    </span>
+
+    {{ content }}</p>
