Fix styling issues from holiday.css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
             max-width: 100%;
             display: inline-flex;
             justify-content: space-evenly;
-            overflow: hidden;
+            overflow: scroll;
         }
 
         .appContainer {
@@ -27,6 +27,11 @@
             display: inline-flex;
             flex-direction: column;
             background-color: transparent;
+            max-width: 50%;
+        }
+
+        iframe{
+            width: unset;
         }
     </style>
     <meta charset="utf-8">
