move iframe size to front matter

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
 
         iframe{
             width: unset;
+            align-self: center;
         }
     </style>
     <meta charset="utf-8">
